WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171025
Fix assertions in webProcessProxyFromConnection
https://bugs.webkit.org/show_bug.cgi?id=171025
Summary
Fix assertions in webProcessProxyFromConnection
Alex Christensen
Reported
2017-04-19 18:10:20 PDT
Fix assertions in webProcessProxyFromConnection
Attachments
Patch
(1.78 KB, patch)
2017-04-19 18:13 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2017-04-19 18:13:34 PDT
Created
attachment 307535
[details]
Patch
WebKit Commit Bot
Comment 2
2017-04-20 12:13:27 PDT
Comment on
attachment 307535
[details]
Patch Clearing flags on attachment: 307535 Committed
r215567
: <
http://trac.webkit.org/changeset/215567
>
WebKit Commit Bot
Comment 3
2017-04-20 12:13:29 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug